# google-cloud-rust

./: .gitignore  .gitmodules  Cargo.toml  README.md  deny.toml  rustfmt.toml
artifact-registry/: Cargo.toml  README.md
artifact-registry/src/: client.rs  lib.rs  sign.rs
artifact-registry/src/grpc/apiv1/: artifact_registry_client.rs  mod.rs
auth/: Cargo.toml  README.md
auth/src/: credentials.rs  error.rs  lib.rs  misc.rs  token.rs
auth/src/token_source/: authorized_user_token_source.rs  compute_token_source.rs  mod.rs  reuse_token_source.rs  service_account_token_source.rs  token_source.rs
auth/tests/: authroized_user_token_source.rs  compute_token_source.rs  create_token_source.rs  reuse_token_source.rs  service_account_token_source.rs
bigquery/: Cargo.toml  README.md  docker-compose.yaml
bigquery/src/: arrow.rs  client.rs  iterator.rs  lib.rs  query.rs  storage.rs  storage_batch_write.rs  types.rs  value.rs
bigquery/src/grpc/: mod.rs
bigquery/src/grpc/apiv1/: bigquery_client.rs  conn_pool.rs  mod.rs
bigquery/src/http/: bigquery_client.rs  bigquery_dataset_client.rs  bigquery_job_client.rs  bigquery_model_client.rs  bigquery_routine_client.rs  bigquery_row_access_policy_client.rs  bigquery_table_client.rs  bigquery_tabledata_client.rs  error.rs  mod.rs  query.rs  types.rs
bigquery/src/http/dataset/: delete.rs  get.rs  insert.rs  list.rs  mod.rs  patch.rs
bigquery/src/http/job/: cancel.rs  delete.rs  get.rs  get_query_results.rs  insert.rs  list.rs  mod.rs  query.rs
bigquery/src/http/model/: delete.rs  get.rs  list.rs  mod.rs  patch.rs
bigquery/src/http/routine/: delete.rs  get.rs  insert.rs  list.rs  mod.rs  update.rs
bigquery/src/http/row_access_policy/: get_iam_policy.rs  list.rs  mod.rs  test_iam_permissions.rs
bigquery/src/http/table/: delete.rs  get.rs  get_iam_policy.rs  (+6 more)
bigquery/src/storage_write/: buffered.rs  committed.rs  connection.rs  default.rs  flow.rs  flow_controller.rs  mod.rs  pending.rs  pool.rs
default/: Cargo.toml  README.md
default/src/: lib.rs
foundation/auth/: Cargo.toml  README.md
foundation/auth/src/: bridge.rs  credentials.rs  error.rs  idtoken.rs  lib.rs  misc.rs  project.rs  token.rs
foundation/auth/tests/: create_token_source.rs
foundation/gax/: Cargo.toml  README.md
foundation/gax/src/: cancel.rs  conn.rs  grpc.rs  lib.rs  project.rs  retry.rs  status.rs  util.rs
foundation/grpc/: Cargo.toml  README.md
foundation/grpc/src/: conn.rs  lib.rs
foundation/longrunning/: Cargo.toml  README.md
foundation/longrunning/src/: lib.rs  longrunning.rs
foundation/metadata/: Cargo.toml  README.md
foundation/metadata/src/: lib.rs
foundation/metadata/tests/: test.rs
foundation/token/: Cargo.toml  README.md
foundation/token/src/: lib.rs
gax/: Cargo.toml  README.md
gax/src/: call_option.rs  invoke.rs  lib.rs  util.rs
googleapis/: Cargo.toml  README.md  build.rs
googleapis/src/: google.api.rs  google.cloud.bigquery.storage.v1.rs  google.cloud.kms.v1.rs  google.devtools.artifactregistry.v1.rs  google.iam.v1.rs  google.longrunning.rs  google.monitoring.v3.rs  google.pubsub.v1.rs  google.r#type.rs  google.rpc.rs  google.spanner.admin.database.v1.rs  google.spanner.admin.instance.v1.rs  google.spanner.v1.rs  google.storage.v2.rs  lib.rs
googleapis/src/bytes/: google.api.rs  google.cloud.bigquery.storage.v1.rs  google.cloud.kms.v1.rs  google.devtools.artifactregistry.v1.rs  google.iam.v1.rs  google.longrunning.rs  google.monitoring.v3.rs  google.pubsub.v1.rs  google.r#type.rs  google.spanner.admin.database.v1.rs  google.spanner.admin.instance.v1.rs  google.spanner.v1.rs  google.storage.v2.rs
grpc/: Cargo.toml
grpc/src/: conn.rs  inner.rs  lib.rs
kms/: Cargo.toml  README.md
kms/src/: client.rs  ethereum.rs  lib.rs
kms/src/grpc/: mod.rs
kms/src/signer/: ethereum.rs  mod.rs
longrunning/: Cargo.toml
longrunning/src/: lib.rs  longrunning.rs
longrunning/src/autogen/: mod.rs  operations_client.rs
metadata/: Cargo.toml  LICENSE
metadata/src/: lib.rs
metadata/tests/: test.rs
monitoring/: Cargo.toml  LICENSE  README.md
monitoring/src/: client.rs  lib.rs
monitoring/src/apiv1/: conn_pool.rs  metric_service_client.rs  mod.rs
pubsub/: Cargo.toml  README.md  docker-compose.yml
pubsub/src/: cancel.rs  client.rs  lib.rs  publish_scheduler.rs  publisher.rs  subscriber.rs  subscription.rs  topic.rs  util.rs
pubsub/src/apiv1/: conn_pool.rs  mod.rs  publisher_client.rs  schema_client.rs  subscriber_client.rs
pubsub/tests/: client.rs  publisher.rs  subscriber.rs
spanner/: Cargo.toml  README.md  docker-compose.yml  roots.pem
spanner-derive/: Cargo.toml  README.md
spanner-derive/src/: column.rs  lib.rs  query.rs  symbol.rs  table.rs
spanner-derive/tests/: test.rs
spanner-macro/: Cargo.toml
spanner-macro/src/: column.rs  lib.rs  query.rs  symbol.rs  table.rs  util.rs
spanner-macro/tests/: test.rs
spanner/src/: client.rs  key.rs  lib.rs  metrics.rs  mutation.rs  reader.rs  retry.rs  row.rs  session.rs  session_pool.rs  sessions.rs  statement.rs  transaction.rs  transaction_manager.rs  transaction_ro.rs  transaction_rw.rs  value.rs
spanner/src/admin/: client.rs  conn_pool.rs  mod.rs
spanner/src/apiv1/: conn_pool.rs  mod.rs  spanner_client.rs
spanner/src/grpc/: conn_pool.rs  mod.rs
spanner/tests/: change_stream_test.rs  client.rs  client_test.rs  common.rs  reader.rs  session.rs  session_pool.rs  session_refresh_test.rs  session_test.rs  sessions.rs  transaction_manager_test.rs  transaction_ro.rs  transaction_ro_test.rs  transaction_rw.rs  transaction_rw_test.rs
spanner/tests/ddl/: schema.sql
storage/: Cargo.toml  README.md
storage/src/: acl.rs  bucket.rs  client.rs  iam.rs  lib.rs  sign.rs  token_source.rs  util.rs
storage/src/apiv1/: entity.rs  mod.rs  partial.rs  storage_client.rs
storage/src/apiv2/: conn_pool.rs  mod.rs  storage_client.rs
storage/src/grpc/: conn_pool.rs  mod.rs  storage_client.rs
storage/src/http/: entity.rs  error.rs  iam.rs  mod.rs  old_entity.rs  partial.rs  resumable_upload_client.rs  service_account_client.rs  storage_client.rs
(+122 files in other folders)
