[package]
name = "google-cloud-bigquery"
version = "0.2.0"
edition = "2021"
authors = ["yoshidan <naohiro.y@gmail.com>"]
repository = "https://github.com/yoshidan/google-cloud-rust/tree/main/bigquery"
keywords = ["gcp","bigquery","googleapis","google-cloud-rust"]
license = "MIT"
readme = "README.md"
description = "Google Cloud Platform bigquery client library."
documentation = "https://docs.rs/google-cloud-bigquery/latest/google_cloud_bigquery/"

[dependencies]
async-trait = "0.1"
google-cloud-token = { version = "0.1.1", path = "../foundation/token" }
google-cloud-googleapis = { version="0.10.0", path = "../googleapis", features=["bigquery"]}
google-cloud-gax = { version = "0.15.0", path = "../foundation/gax"}
thiserror = "1.0"
tracing = "0.1"
reqwest = { version = "0.11", features = ["json", "stream", "multipart"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version="1.20", features=["macros"] }
time = { version = "0.3", features = ["std", "macros", "formatting", "parsing", "serde"] }
arrow = { version="42.0", default-features = false, features = ["ipc"] }
base64 = "0.21"
bigdecimal = { version="0.3", features=["serde"] }
num-bigint = "0.4"
backon = "0.4"

google-cloud-auth = { optional = true, version = "0.11", path="../foundation/auth", default-features=false }

[dev-dependencies]
tokio = { version="1.20", features=["rt-multi-thread"] }
serial_test = "0.9"
tracing-subscriber = "0.3.11"
ctor = "0.1.22"
tokio-util =  {version ="0.7", features = ["codec"] }
google-cloud-auth = { path = "../foundation/auth", default-features=false }
base64-serde = "0.7"

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
trace = []
auth = ["google-cloud-auth"]
