[package]
name = "gcloud-bigquery"
version = "1.3.0"
edition = "2021"
authors = ["yoshidan <naohiro.y@gmail.com>"]
repository = "https://github.com/yoshidan/google-cloud-rust/tree/main/bigquery"
keywords = ["gcp","bigquery","googleapis","google-cloud-rust"]
license = "MIT"
readme = "README.md"
description = "Google Cloud Platform bigquery client library."
documentation = "https://docs.rs/gcloud-bigquery/latest/gcloud_bigquery/"

[lib]
doctest = false

[dependencies]
async-trait = "0.1"
token-source = "1.0"
google-cloud-googleapis = { package = "gcloud-googleapis", version="1.2.0", path = "../googleapis", features=["bigquery"]}
google-cloud-gax = { package = "gcloud-gax", version = "1.2.0", path = "../foundation/gax"}
thiserror = "1.0"
tracing = "0.1"
reqwest = { version = "0.12.4", features = ["json", "stream", "multipart", "charset"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version="1.32", features=["macros"] }
time = { version = "0.3", features = ["std", "macros", "formatting", "parsing", "serde"] }
arrow = { version = "54.2.1", default-features = false, features = ["ipc"] }
base64 = "0.22"
bigdecimal = { version="0.4", features=["serde"] }
num-bigint = "0.4"
backon = { version = "1.2", default-features = false, features = ["tokio-sleep"] }
reqwest-middleware = { version = "0.4", features = ["json", "multipart"] }
anyhow = "1.0"
async-stream = "0.3"
prost-types = "0.13"

google-cloud-auth = { package = "gcloud-auth", optional = true, version = "1.1.0", path="../foundation/auth", default-features=false }

[dev-dependencies]
tokio = { version="1.32", features=["rt-multi-thread"] }
serial_test = "3.1"
tracing-subscriber = { version="0.3.17", features=["env-filter"] }
ctor = "0.1.26"
google-cloud-auth = { package = "gcloud-auth", path = "../foundation/auth", default-features=false }
base64-serde = "0.8"
prost = "0.13"
futures-util = "0.3"

[features]
default = ["default-tls", "auth"]
default-tls = ["reqwest/default-tls","google-cloud-auth?/default-tls"]
rustls-tls = ["reqwest/rustls-tls","google-cloud-auth?/rustls-tls"]
hickory-dns = ["reqwest/hickory-dns", "google-cloud-auth?/hickory-dns"]
trace = []
auth = ["google-cloud-auth"]
external-account = ["google-cloud-auth?/external-account"]
