[package]
name = "google-cloud-default"
version = "0.2.0"
authors = ["yoshidan <naohiro.y@gmail.com>"]
edition = "2021"
repository = "https://github.com/yoshidan/google-cloud-rust/tree/main/foundation/auth"
keywords = ["gcp","googleapis","google-cloud-rust"]
license = "MIT"
readme = "README.md"
description = "Google Cloud Platform default config."

[dependencies]
async-trait = "0.1"

google-cloud-auth = { version = "0.9", path = "../foundation/auth", default-features = false }

# optional
google-cloud-metadata = { version = "0.3", path = "../foundation/metadata", optional = true }
google-cloud-gax = { version = "0.14", path = "../foundation/gax", optional = true }

# components
google-cloud-pubsub = { version = "0.14", path = "../pubsub", optional = true }
google-cloud-spanner = { version = "0.18", path = "../spanner", optional = true }
google-cloud-storage = { version = "0.11", path = "../storage", default-features=false, optional = true }

[dev-dependencies]
tokio = "1.20"
serial_test = "0.9"

[features]
default = ["default-tls"]
default-tls = ["google-cloud-auth/default-tls"]
rustls-tls = ["google-cloud-auth/rustls-tls"]
spanner = ["google-cloud-spanner", "google-cloud-gax"]
pubsub = ["google-cloud-pubsub", "google-cloud-gax"]
storage = ["google-cloud-storage", "google-cloud-metadata"]
