[package]
name = "gax"
version = "0.0.1"
authors = ["yoshidan <naohiro.y@gmail.com>"]
edition = "2018"
repository = "https://github.com/yoshidan/google-cloud-rust/gax"
keywords = ["gcp","googleapis","google-cloud-rust"]
license-file = "LICENCE"
readme = "README.md"
description = "Google API Extensions for Rust."

[dependencies]
log = "0.4"
rand = "0.8.4"
tonic = { version = "0.5.2", features = ["tls", "prost"] }
tokio = { version = "1.7.0" }