[package]
name = "google-cloud-gax"
version = "0.1.0"
authors = ["yoshidan <naohiro.y@gmail.com>"]
edition = "2018"
repository = "https://github.com/yoshidan/google-cloud-rust/gax"
keywords = ["gcp","googleapis","google-cloud-rust"]
license-file = "LICENCE"
readme = "README.md"
description = "Google Cloud Platform gRPC retry library."

[dependencies]
log = "0.4"
rand = "0.8"
tonic = { version = "0.5", features = ["tls", "prost"] }
tokio = { version = "1.7" }