[package]
name = "google-cloud-gax"
version = "0.2.0"
authors = ["yoshidan <naohiro.y@gmail.com>"]
edition = "2018"
repository = "https://github.com/yoshidan/google-cloud-rust/tree/main/gax"
keywords = ["gcp","googleapis","google-cloud-rust"]
license-file = "LICENSE"
readme = "README.md"
description = "Google Cloud Platform gRPC retry library."

[dependencies]
log = "0.4"
rand = "0.8"
tokio = { version = "1.7" }
google-cloud-googleapis = { version = "0.2.0", path = "../googleapis" }
