[package]
name = "google-cloud-googleapis"
version = "0.16.0"
authors = ["yoshidan <naohiro.y@gmail.com>"]
edition = "2021"
repository = "https://github.com/yoshidan/google-cloud-rust/tree/main/googleapis"
keywords = ["gcp","googleapis","google-cloud-rust"]
license = "MIT"
readme = "README.md"
description = "Google Cloud Platform rust client."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.12", default-features = false, features = ["prost", "gzip"] }
prost = "0.13"
prost-types = "0.13"

[build-dependencies]
tonic-build = { version = "0.12", optional = true }
prost-build = { version = "0.13", optional = true }

[features]
spanner = []
pubsub = []
storage = []
artifact-registry = []
kms = []
bigquery = []
generate = ["dep:tonic-build", "dep:prost-build"]
bytes = []
