[package]
name = "gcloud-googleapis"
version = "1.2.0"
authors = ["yoshidan <naohiro.y@gmail.com>"]
edition = "2021"
repository = "https://github.com/yoshidan/google-cloud-rust/tree/main/googleapis"
keywords = ["gcp","googleapis","google-cloud-rust"]
license = "MIT"
readme = "README.md"
description = "Google Cloud Platform rust client."

[lib]
doctest = false

[dependencies]
tonic = { version = "0.13", default-features = false, features = ["channel", "prost", "codegen", "gzip"] }
prost = "0.13"
prost-types = "0.13"

[build-dependencies]
tonic-build = { version = "0.13", optional = true }
prost-build = { version = "0.13", optional = true }

[features]
spanner = []
pubsub = []
storage = []
artifact-registry = []
kms = []
bigquery = []
generate = ["dep:tonic-build", "dep:prost-build"]
bytes = []
