[package]
name = "gcloud-googleapis"
version = "1.3.0"
authors = ["yoshidan <naohiro.y@gmail.com>"]
edition = "2021"
repository = "https://github.com/yoshidan/google-cloud-rust/tree/main/googleapis"
keywords = ["gcp","googleapis","google-cloud-rust"]
license = "MIT"
readme = "README.md"
description = "Google Cloud Platform rust client."

[lib]
doctest = false

[dependencies]
tonic = { version = "0.14", default-features = false, features = ["channel", "codegen", "gzip"] }
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"

[build-dependencies]
tonic-build = { version = "0.14", optional = true }
tonic-prost-build = { version = "0.14", optional = true }
prost-build = { version = "0.14", optional = true }

[features]
spanner = []
pubsub = []
storage = []
artifact-registry = []
kms = []
bigquery = []
generate = ["dep:tonic-build", "dep:prost-build", "dep:tonic-prost-build"]
bytes = []
