[package]
name = "google-cloud-grpc"
version = "0.1.0"
authors = ["yoshidan <naohiro.y@gmail.com>"]
edition = "2021"
repository = "https://github.com/yoshidan/google-cloud-rust/tree/main/grpc"
keywords = ["gcp","grpc","googleapis","google-cloud-rust"]
license-file = "LICENSE"
readme = "README.md"
description = "Google Cloud Platform server gRPC library."

[dependencies]
thiserror = "1.0"
tonic = { version = "0.6", features = ["tls", "prost"] }
prost = "0.9"
prost-types = "0.9"
google-cloud-auth= { version = "0.1.0", path = "../auth" }
