[package]
name = "google-cloud-kms"
version = "0.2.0"
edition = "2021"
authors = ["yoshidan <naohiro.y@gmail.com>"]
repository = "https://github.com/yoshidan/google-cloud-rust/tree/main/kms"
keywords = ["gcp", "kms","googleapis","google-cloud-rust"]
license = "MIT"
readme = "README.md"
description = "Google Cloud Platform Key Management Service client library."
documentation = "https://docs.rs/google-cloud-kms/latest/google_cloud_kms/"

[dependencies]
google-cloud-token = { version = "0.1.2", path = "../foundation/token" }
google-cloud-auth = { optional = true, version = "0.15", path="../foundation/auth", default-features=false }
google-cloud-googleapis = { version="0.13.0", path = "../googleapis", features=["kms"]}
google-cloud-gax = { version = "0.17.0", path = "../foundation/gax"}
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { version = "1.0", features = [] }
prost-types = "0.12"
k256 = {version = "0.13", features = ["pem"], optional = true}
tiny-keccak = {version = "2.0", features = ["keccak"],  optional = true}

[dev-dependencies]
tokio = { version="1.32", features=["rt-multi-thread"] }
serial_test = "3.1"
tracing-subscriber = { version="0.3.17", features=["env-filter"]}
ctor = "0.1"
tokio-util =  {version ="0.7", features = ["codec"] }
google-cloud-auth = { path = "../foundation/auth", default-features=false }
hex-literal = { version = "0.4" }

[features]
default = ["default-tls", "auth", "eth"]
default-tls = ["google-cloud-auth?/default-tls"]
rustls-tls = ["google-cloud-auth?/rustls-tls"]
trace = []
auth = ["google-cloud-auth"]
external-account = ["google-cloud-auth?/external-account"]
eth = ["k256", "tiny-keccak"]