[package]
name = "gcloud-kms"
version = "1.0.0"
edition = "2021"
authors = ["yoshidan <naohiro.y@gmail.com>"]
repository = "https://github.com/yoshidan/google-cloud-rust/tree/main/kms"
keywords = ["gcp", "kms","googleapis","google-cloud-rust"]
license = "MIT"
readme = "README.md"
description = "Google Cloud Platform Key Management Service client library."
documentation = "https://docs.rs/gcloud-kms/latest/gcloud_kms/"

[lib]
doctest = false

[dependencies]
google-cloud-token = { package = "gcloud-token", version = "1.0.0", path = "../foundation/token" }
google-cloud-auth = { package = "gcloud-auth", optional = true, version = "1.0.0", path="../foundation/auth", default-features=false }
google-cloud-googleapis = { package = "gcloud-googleapis", version="1.0.0", path = "../googleapis", features=["kms"]}
google-cloud-gax = { package = "gcloud-gax", version = "1.0.0", path = "../foundation/gax"}
tracing = "0.1"
thiserror = "1.0"
prost-types = "0.13"

# ethereum
ethers-core = { version = "2.0", optional = true}
ethers-signers = { version = "2.0", optional = true}
async-trait = { version = "0.1", optional = true }
k256 = { version = "0.13", features = ["pem"], optional = true}

[dev-dependencies]
tokio = { version="1.32", features=["rt-multi-thread"] }
serial_test = "3.1"
tracing-subscriber = { version="0.3.17", features=["env-filter"]}
ctor = "0.1"
google-cloud-auth = { package = "gcloud-auth", path = "../foundation/auth", default-features=false }
hex-literal = "0.4"
ethers = "2.0"

[features]
default = ["default-tls", "auth"]
default-tls = ["google-cloud-auth?/default-tls"]
rustls-tls = ["google-cloud-auth?/rustls-tls"]
trace = []
auth = ["google-cloud-auth"]
external-account = ["google-cloud-auth?/external-account"]
eth = ["ethers-core", "ethers-signers", "async-trait", "k256"]
