[package]
name = "gcloud-kms"
version = "1.2.1"
edition = "2021"
authors = ["yoshidan <naohiro.y@gmail.com>"]
repository = "https://github.com/yoshidan/google-cloud-rust/tree/main/kms"
keywords = ["gcp", "kms","googleapis","google-cloud-rust"]
license = "MIT"
readme = "README.md"
description = "Google Cloud Platform Key Management Service client library."
documentation = "https://docs.rs/gcloud-kms/latest/gcloud_kms/"

[lib]
doctest = false

[dependencies]
token-source = "1.0"
google-cloud-auth = { package = "gcloud-auth", optional = true, version = "1.1.0", path="../foundation/auth", default-features=false }
google-cloud-googleapis = { package = "gcloud-googleapis", version="1.2.0", path = "../googleapis", features=["kms"]}
google-cloud-gax = { package = "gcloud-gax", version = "1.2.0", path = "../foundation/gax"}
tracing = "0.1"

[dev-dependencies]
tokio = { version="1.32", features=["rt-multi-thread"] }
serial_test = "3.1"
tracing-subscriber = { version="0.3.17", features=["env-filter"]}
ctor = "0.1"
google-cloud-auth = { package = "gcloud-auth", path = "../foundation/auth", default-features=false }

[features]
default = ["default-tls", "auth"]
default-tls = ["google-cloud-auth?/default-tls"]
rustls-tls = ["google-cloud-auth?/rustls-tls"]
trace = []
auth = ["google-cloud-auth"]
external-account = ["google-cloud-auth?/external-account"]
