[package]
name = "google-cloud-longrunning"
version = "0.1.0"
authors = ["yoshidan <naohiro.y@gmail.com>"]
edition = "2021"
repository = "https://github.com/yoshidan/google-cloud-rust/tree/main/longrunning"
keywords = ["gcp","longrunning","googleapis","google-cloud-rust"]
license-file = "LICENSE"
readme = "README.md"
description = "Google Cloud Platform server longrunning library."

[dependencies]
log = "0.4"
tokio = { version = "1.7" }
google-cloud-googleapis = { version = "0.2.0", path = "../googleapis" }
google-cloud-gax = { version = "0.2.0", path = "../gax" }
