[package]
name = "google-cloud-metadata"
version = "0.1.0"
authors = ["yoshidan <naohiro.y@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.7", features = ["sync","net","parking_lot"] }
hyper = { version = "0.14", features = ["full"] }
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.7", features = ["test-util", "rt-multi-thread", "macros"]}