[package]
name = "google-cloud-monitoring"
version = "0.1.0"
authors = ["André Eriksson <eandre@gmail.com>"]
edition = "2021"
repository = "https://github.com/yoshidan/google-cloud-rust/tree/main/monitoring"
keywords = ["gcp","monitoring","googleapis","google-cloud-rust"]
license = "MIT"
readme = "README.md"
description = "Google Cloud Platform monitoring client library."
documentation = "https://docs.rs/google-cloud-monitoring/latest/google_cloud_monitoring/"

[dependencies]
tracing = "0.1"
prost-types = "0.13"
tokio = "1.32"
async-channel = "1.9"
async-stream = "0.3"
thiserror = "1.0"
tokio-util = "0.7"

google-cloud-token = { version = "0.1.2", path = "../foundation/token" }
google-cloud-gax = { version = "0.19.2", path = "../foundation/gax" }
google-cloud-googleapis = { version = "0.16.0", path = "../googleapis", features = ["monitoring"]}

google-cloud-auth = { optional = true, version = "0.17", path="../foundation/auth", default-features=false }

[dev-dependencies]
tokio = { version="1.32", features=["rt-multi-thread"] }
rand = "0.8.5"
tracing-subscriber = "0.3"
serial_test = "3.1"
uuid = { version="1.4", features=["v4"] }
ctor = "0.1.26"
futures-util = "0.3"

[features]
default = ["auth", "default-tls"]
default-tls = ["google-cloud-auth?/default-tls"]
rustls-tls = ["google-cloud-auth?/rustls-tls"]
external-account = ["google-cloud-auth?/external-account"]
trace = []
bytes = ["google-cloud-googleapis/bytes"]
auth = ["google-cloud-auth"]
