[package]
name = "gcloud-pubsub"
version = "1.3.0"
authors = ["yoshidan <naohiro.y@gmail.com>"]
edition = "2021"
repository = "https://github.com/yoshidan/google-cloud-rust/tree/main/pubsub"
keywords = ["gcp","pubsub","googleapis","google-cloud-rust"]
license = "MIT"
readme = "README.md"
description = "Google Cloud Platform pubsub client library."
documentation = "https://docs.rs/gcloud-pubsub/latest/gcloud_pubsub/"

[lib]
doctest = false

[dependencies]
tracing = "0.1"
prost-types = "0.13"
tokio = "1.32"
async-channel = "1.9"
async-stream = "0.3"
thiserror = "1.0"
tokio-util = "0.7"

token-source = "1.0"
google-cloud-gax = { package = "gcloud-gax", version = "1.2.0", path = "../foundation/gax" }
google-cloud-googleapis = { package = "gcloud-googleapis", version = "1.2.0", path = "../googleapis", features = ["pubsub"]}

google-cloud-auth = { package = "gcloud-auth", optional = true, version = "1.1.0", path="../foundation/auth", default-features=false }

[dev-dependencies]
tokio = { version="1.32", features=["rt-multi-thread"] }
rand = "0.8.5"
tracing-subscriber = "0.3"
serial_test = "3.1"
uuid = { version="1.4", features=["v4"] }
ctor = "0.1.26"
futures-util = "0.3"

[features]
default = ["auth", "default-tls"]
default-tls = ["google-cloud-auth?/default-tls"]
rustls-tls = ["google-cloud-auth?/rustls-tls"]
external-account = ["google-cloud-auth?/external-account"]
trace = []
bytes = ["google-cloud-googleapis/bytes"]
auth = ["google-cloud-auth"]
