[package]
name = "google-cloud-spanner-derive"
version = "0.2.0"
authors = ["yoshidan <naohiro.y@gmail.com>"]
edition = "2021"
repository = "https://github.com/yoshidan/google-cloud-rust/tree/main/macro/spanner"
keywords = ["gcp","spanner","googleapis","google-cloud-rust"]
license = "MIT"
readme = "README.md"
description = "Google Cloud Platform spanner client library macro derive."
documentation = "https://docs.rs/google-cloud-spanner/latest/google_cloud_spanner_derive/"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version="1.0", features=["full"] }
convert_case = "0.6"

[dev-dependencies]
google-cloud-spanner = { path = "../spanner"}
time = { version = "0.3", features = ["serde"] }
tokio = { version="1.32", features=["rt-multi-thread"] }
serial_test = "3.1"
serde = "1.0"
serde_json = "1.0"
