[package]
name = "google-cloud-spanner"
version = "0.32.0"
authors = ["yoshidan <naohiro.y@gmail.com>"]
edition = "2021"
repository = "https://github.com/yoshidan/google-cloud-rust/tree/main/spanner"
keywords = ["gcp","spanner","googleapis","google-cloud-rust"]
license = "MIT"
readme = "README.md"
description = "Google Cloud Platform spanner client library."
documentation = "https://docs.rs/google-cloud-spanner/latest/google_cloud_spanner/"

[dependencies]
tracing = "0.1"
prost-types = "0.13"
tokio = "1.32"
time = { version="0.3", features = ["std", "macros", "formatting", "parsing"] }
thiserror = "1.0"
parking_lot = "0.12"
base64 = "0.21"
serde = { version = "1.0", optional = true, features = ["derive"] }
tokio-util = "0.7"
bigdecimal = { version="0.4", features=["serde"] }

google-cloud-token = { version = "0.1.2", path = "../foundation/token" }
google-cloud-longrunning = { version = "0.21.0", path = "../foundation/longrunning" }
google-cloud-gax = { version = "0.19.2", path = "../foundation/gax" }
google-cloud-googleapis = { version = "0.16.0", path = "../googleapis", features = ["spanner"]}

google-cloud-auth = { optional = true, version = "0.17", path="../foundation/auth", default-features=false }

[dev-dependencies]
tokio = { version="1.32", features=["rt-multi-thread"] }
tracing-subscriber = { version="0.3", features=["env-filter"] }
serial_test = "3.1"
ctor = "0.1"
google-cloud-auth = { path="../foundation/auth", default-features=false, features=["rustls-tls"]}

[features]
default = ["serde", "auth", "default-tls"]
trace = []
auth = ["google-cloud-auth"]
default-tls = ["google-cloud-auth?/default-tls"]
rustls-tls = ["google-cloud-auth?/rustls-tls"]
external-account = ["google-cloud-auth?/external-account"]
