[package]
name = "gcloud-spanner"
version = "1.6.1"
authors = ["yoshidan <naohiro.y@gmail.com>"]
edition = "2021"
repository = "https://github.com/yoshidan/google-cloud-rust/tree/main/spanner"
keywords = ["gcp","spanner","googleapis","google-cloud-rust"]
license = "MIT"
readme = "README.md"
description = "Google Cloud Platform spanner client library."
documentation = "https://docs.rs/gcloud-spanner/latest/gcloud_spanner/"

[lib]
doctest = false

[dependencies]
tracing = "0.1"
prost-types = "0.14"
tokio = "1.32"
time = { version="0.3", features = ["std", "macros", "formatting", "parsing"] }
thiserror = "2.0"
parking_lot = "0.12"
base64 = "0.22"
tokio-util = "0.7"
bigdecimal = { version="0.4", features=["serde"] }
uuid = { version = "1", optional = true }

token-source = "1.0"
google-cloud-longrunning = { package = "gcloud-longrunning", version = "1.3.1", path = "../foundation/longrunning" }
google-cloud-gax = { package = "gcloud-gax", version = "1.3.2", path = "../foundation/gax" }
google-cloud-googleapis = { package = "gcloud-googleapis", version = "1.3.0", path = "../googleapis", features = ["spanner"]}
opentelemetry = { version = "0.31", optional = true, default-features = false, features = ["metrics"] }

google-cloud-auth = { package = "gcloud-auth", optional = true, version = "1.2.0", path="../foundation/auth", default-features=false }

[dev-dependencies]
tokio = { version="1.32", features=["rt-multi-thread"] }
tracing-subscriber = { version="0.3", features=["env-filter"] }
serial_test = "3.1"
ctor = "0.5"
google-cloud-auth = { package = "gcloud-auth", path="../foundation/auth", default-features=false, features=["rustls-tls"]}

[features]
default = ["auth", "default-tls", "jwt-aws-lc-rs"]
trace = []
auth = ["google-cloud-auth"]
default-tls = ["google-cloud-auth?/default-tls"]
rustls-tls = ["google-cloud-auth?/rustls-tls"]
external-account = ["google-cloud-auth?/external-account"]
otel-metrics = ["opentelemetry"]
jwt-aws-lc-rs = ["google-cloud-auth?/jwt-aws-lc-rs"]
jwt-rust-crypto = ["google-cloud-auth?/jwt-rust-crypto"]
uuid = ["dep:uuid"]
