[package]
name = "google-cloud-storage"
version = "0.14.0"
edition = "2021"
authors = ["yoshidan <naohiro.y@gmail.com>"]
repository = "https://github.com/yoshidan/google-cloud-rust/tree/main/storage"
keywords = ["gcp","gcs","storage","googleapis","google-cloud-rust"]
license = "MIT"
readme = "README.md"
description = "Google Cloud Platform storage client library."
documentation = "https://docs.rs/google-cloud-storage/latest/google_cloud_storage/"

[dependencies]
google-cloud-token = { version = "0.1.1", path = "../foundation/token" }
rsa = "0.6"
thiserror = "1.0"
time = { version = "0.3", features = ["std", "macros", "formatting", "parsing", "serde"] }
base64 = "0.21"
regex = "1.9"
sha2 = "0.10"
ring = "0.16"
tokio = { version="1.32", features=["macros"] }
async-stream = "0.3"
once_cell = "1.18"
hex = "0.4"
url = "2.4"
tracing = "0.1"
reqwest = { version = "0.11", features = ["json", "stream", "multipart"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2.3"
futures-util = "0.3"
bytes = "1.5"

google-cloud-metadata = { optional = true, version = "0.4", path = "../foundation/metadata" }
google-cloud-auth = { optional = true, version = "0.13", path="../foundation/auth", default-features=false }

[dev-dependencies]
tokio = { version="1.32", features=["rt-multi-thread"] }
serial_test = "0.9"
tracing-subscriber = { version="0.3.17", features=["env-filter"]}
ctor = "0.1.26"
tokio-util =  {version ="0.7", features = ["codec"] }
google-cloud-auth = { path = "../foundation/auth", default-features=false }

[features]
default = ["default-tls", "auth"]
default-tls = ["reqwest/default-tls","google-cloud-auth?/default-tls"]
rustls-tls = ["reqwest/rustls-tls","google-cloud-auth?/rustls-tls"]
trace = []
auth = ["google-cloud-auth", "google-cloud-metadata"]
external-account = ["google-cloud-auth?/external-account"]
